[package]
name = "foxbox_users"
version = "0.1.0"
authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>", "Salvador de la Puente González <salva@unoyunodiez.com"]

[dependencies]
hyper = "0.10"
iron = "0.5"
iron-cors = { git = "https://github.com/fxbox/iron-cors.git" }
jwt = "0.4.0"
libc = "0.2.7"
pwhash = "0.1.1"
router = "0.5"
rustc-serialize = "0.3.18"
rusqlite = "0.10"
rust-crypto = "0.2.34"
unicase = "1.4.0"
urlencoded = "0.5"
uuid = { version = "0.3", features = ["v4"] }

[dev-dependencies]
iron-test = "0.5"
stainless = "0.1.4"
clippy = "0.0"
url="1.2.0"
